--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
-# Python
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
+
+# C extensions
 *.so
+
+# Distribution / packaging
 .Python
 build/
 develop-eggs/
@@ -16,42 +20,98 @@ parts/
 sdist/
 var/
 wheels/
+pip-wheel-metadata/
+share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+MANIFEST
 
-# Virtual Environment
-venv/
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+
+# Environments
+.env
+.venv
 env/
+venv/
 ENV/
+env.bak/
+venv.bak/
 
-# IDE
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# PEP 582; used by PDM, PEP 582 compatible tools and project workflow
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Editor directories and files
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.sublime-project
+*.sublime-workspace
 .idea/
-.vscode/
-*.swp
-*.swo
+.project
+.pydevproject
+.settings/
 
-# OS specific
-.DS_Store
-Thumbs.db
-
-# Application specific
-*.db
+# Miscellaneous
+*.bak
 *.log
-# 忽略 Python 缓存文件
-__pycache__/
-*.pyc
-
-# 忽略那个可能生成的大型 Python 文件
-# 如果 resources_rc.py 是生成文件，请添加以下行：
-kindness_companion_app/resources_rc.py
-
-# 将所有的 .ttc 字体文件交给 Git LFS 管理
-*.ttc filter=lfs diff=lfs merge=lfs -text
-
-# 可能包含大量小文件或外部库
-kindness_companion_app/resources/feather-4.29.0/
-# 如果 icons 文件夹下有很多不常修改且数量巨大的图标，可以考虑忽略整个文件夹
-# kindness_companion_app/resources/icons/
-# 或者只忽略 svg 文件（如果只有少量其他文件）
-# *.svg
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
