--- a/kindness_companion_app/requirements.txt
+++ b/kindness_companion_app/requirements.txt
@@ -1,8 +1,31 @@
-PySide6>=6.4.0
+PySide6>=6.5.0
 apscheduler>=3.9.1
 pytest>=7.0.0
-pytest-qt>=4.0.0
-pyobjc
+pytest-qt>=4.2.0
+pytest-cov>=4.1.0
+pytest-mock>=3.10.0
+coverage>=7.0.0
+pytest-xvfb>=3.0.0
+pytest-timeout>=2.1.0
+pytest-env>=1.0.0
+pytest-randomly>=3.12.0
+pytest-repeat>=0.9.1
+pytest-rerunfailures>=12.0
+pytest-sugar>=0.9.7
+pytest-html>=4.0.0
+pytest-metadata>=3.0.0
+pytest-ordering>=0.6
+pytest-parallel>=0.1.1
+pytest-profiling>=1.7.0
+pytest-reportlog>=0.4.0
+pytest-reportportal>=5.3.0
+pytest-selenium>=4.0.0
+pytest-socket>=0.6.0
+pytest-splinter>=3.0.0
+pytest-vcr>=1.0.2
+pytest-watch>=4.2.0
+pytest-xdist>=3.3.0
+pytest-xprocess>=0.22.0
 requests # Added for API calls
 flask    # Added for optional community API
 zhipuai
